@@ -1,3 +1,9 @@
+2007-02-16  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/comm/modulator.h: Fixed bug [1661419] by adding default
+	constructors to the QAM, PSK, PAM_c and PAM modulator classes.
+	Thanks to Jordy Potman for reporting this bug.
+
 2007-02-12  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* doc/Makefile.am, Makefile.am: Changed the naming scheme of
